# dramatiq-monitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: dev.sh  seed_demo.py  stop.sh
src/dramatiq_monitor/: __init__.py  app.py  auth.py  cli.py  config.py  csrf.py  guards.py  keys.py  models.py
src/dramatiq_monitor/contrib/: worker_meta.py
src/dramatiq_monitor/redis_ops/: actions.py  connect.py  discovery.py  messages.py  stats.py
src/dramatiq_monitor/static/: VENDORED.md  ascii-blob.js  style.css
src/dramatiq_monitor/templates/: _message_rows.html  _queues_table.html  _workers_table.html  base.html  message_detail.html  messages.html  namespaces.html  overview.html
tests/: conftest.py  test_action_routes.py  test_actions.py  test_api.py  test_app.py  test_boundary.py  test_config.py  test_discovery.py  test_keys.py  test_messages.py  test_security.py  test_stats.py
