[project]
name = "dramatiq-monitor"
version = "0.1.0"
description = "Lightweight web dashboard for monitoring Dramatiq task queues on Redis"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "starlette",
    "jinja2",
    "redis>=4.5",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "fakeredis>=2.20",
    "httpx",
]

[project.scripts]
dramatiq-monitor = "dramatiq_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dramatiq_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
